<resources>
    <string name="app_name" translatable="false">Datos Personales</string>
    <string name="TextViewNombre">Nombre:</string>
    <string name="editTextNombre">Escriba aquí su nombre</string>
    <string name="TextViewApellidos">Apellidos:</string>
    <string name="editTextApellidos">Escriba aquí sus apellidos</string>
    <string name="TextViewEdad">Edad:</string>
    <string name="editTextEdad">Escriba aquí su edad</string>
    <string name="textViewGenero">Género:</string>
    <string name="radioButtonHombre">Hombre</string>
    <string name="radioButtonMujer">Mujer</string>
    <string name="textViewEstadoCivil">Estado Civil:</string>
    <string name="Casado">Casado</string>
    <string name="Separado">Separado</string>
    <string name="Viudo">Viudo</string>
    <string name="Otro">Otro</string>
    <string-array name="estadoCivil">
        <item>@string/Casado</item>
        <item>@string/Separado</item>
        <item>@string/Viudo</item>
        <item>@string/Otro</item>
    </string-array>
    <string name="textViewHijos">¿Tiene Hijos?</string>
    <string name="switchHijos">NO/SÍ</string>
    <string name="btnMostrar">Mostrar</string>
    <string name="btnLimpiar">Limpiar</string>
    <string name="errorNombre">Falta añadir el nombre.</string>
    <string name="errorApellidos">Falta añadir el apellido.</string>
    <string name="errorEdad">Falta añadir la edad.</string>
    <string name="hombre">hombre</string>
    <string name="mujer">mujer</string>
    <string name="conHijos">con hijos</string>
    <string name="sinHijos">sin hijos</string>
    <string name="mayorEdad">mayor de edad</string>
    <string name="menorEdad">menor de edad</string>
</resources>
