<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/EstiloVertical"
    tools:context=".MainActivity">

    <LinearLayout
        style="@style/EstiloHorizontal">

        <TextView
            android:id="@+id/TextViewNombre"
            style="@style/EstiloContentHeight.radio.Text"
            android:text="@string/TextViewNombre" />

        <EditText
            android:id="@+id/editTextNombre"
            style="@style/EstiloContentHeight.EditText"
            android:hint="@string/editTextNombre"
            android:inputType="textCapSentences|textPersonName|textCapWords" />
    </LinearLayout>

    <LinearLayout
        style="@style/EstiloHorizontal">

        <TextView
            android:id="@+id/textViewApellidos"
            style="@style/EstiloContentHeight.radio.Text"
            android:text="@string/TextViewApellidos" />

        <EditText
            android:id="@+id/editTextApellidos"
            style="@style/EstiloContentHeight.EditText"
            android:hint="@string/editTextApellidos"
            android:inputType="textCapSentences|textPersonName|textCapWords" />
    </LinearLayout>

    <LinearLayout
        style="@style/EstiloHorizontal">

        <TextView
            android:id="@+id/textViewEdad"
            style="@style/EstiloContentHeight.radio.Text"
            android:text="@string/TextViewEdad" />

        <EditText
            android:id="@+id/editTextEdad"
            style="@style/EstiloContentHeight.EditText"
            android:ems="10"
            android:hint="@string/editTextEdad"
            android:inputType="textPersonName|number" />
    </LinearLayout>

    <LinearLayout
        style="@style/EstiloHorizontal">
        <TextView
            android:id="@+id/textViewGenero"
            style="@style/EstiloContentHeight.radio.Text"
            android:text="@string/textViewGenero" />

        <RadioGroup
            android:id="@+id/radioGroup"
            style="@style/EstiloContentHeight.Group"
            android:gravity="center">

            <RadioButton
                android:id="@+id/radioButtonHombre"
                style="@style/EstiloContentHeight.radio"
                android:checked="true"
                android:gravity="center"
                android:text="@string/radioButtonHombre" />

            <RadioButton
                android:id="@+id/radioButtonMujer"
                style="@style/EstiloContentHeight.radio"
                android:gravity="center"
                android:text="@string/radioButtonMujer" />

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        style="@style/EstiloHorizontal">

        <TextView
            android:id="@+id/textViewEstadoCivil"
            style="@style/EstiloContentHeight.radio.Text"
            android:text="@string/textViewEstadoCivil" />
        <Spinner
            android:id="@+id/spinnerEstadoCivil"
            style="@style/EstiloHorizontal" />
    </LinearLayout>

    <LinearLayout
        style="@style/EstiloHorizontal">

        <TextView
            android:id="@+id/textViewHijos"
            style="@style/EstiloContentHeight.radio.Text"
            android:text="@string/textViewHijos" />

        <Switch
            android:id="@+id/switchHijos"
            style="@style/boton"
            android:gravity="center"
            android:text="@string/switchHijos" />
    </LinearLayout>

    <LinearLayout
        style="@style/EstiloHorizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btnMostrar"
            style="@style/boton"
            android:text="@string/btnMostrar" />

        <Button
            android:id="@+id/btnLimpiar"
            style="@style/boton"
            android:text="@string/btnLimpiar" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewResultado"
        style="@style/resultado" />
</LinearLayout>